// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can display a loading spinner 1`] = `
<DocumentFragment>
  <main>
    <div
      class="mw8 center f6 f5-l ph2"
    >
      <h1
        class="visually-hidden"
      >
        Record Search
      </h1>
      <section
        class="bg-white shadow br3 pa4 mt3 "
      >
        <form
          class="mw7 center"
          novalidate=""
        >
          <div
            class="flex"
          >
            <div
              class="w-100 w-third-ns w-25-l mb3 pl2-r"
            >
              <label
                class="db mb1 fw6"
                for="today"
              >
                Expunge Date 
                <span
                  class="fw4 f6"
                >
                  mm/dd/yyyy
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 "
                id="today"
                required=""
                type="text"
                value="1/2/2023"
              />
            </div>
          </div>
          <div
            class="flex flex-wrap items-end"
            data-testid="alias-form-0"
          >
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="firstName"
              >
                First Name 
                <span
                  class="fw4 f6"
                />
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 br-0-ns br--left-ns relative"
                id="firstName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="middleName"
              >
                Middle Name 
                <span
                  class="fw4 f6"
                >
                  (Optional)
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 br0-ns"
                id="middleName"
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="lastName"
              >
                Last Name 
                <span
                  class="fw4 f6"
                />
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 bl-0-ns br--right-ns"
                id="lastName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 pl2-l"
            >
              <label
                class="db mb1 fw6"
                for="birthDate"
              >
                Date of Birth 
                <span
                  class="fw4 f6"
                >
                  mm/dd/yyyy
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 "
                id="birthDate"
                type="text"
                value=""
              />
            </div>
            <div
              class="visually-hidden flex items-center pb1 mb3 ml3-ns ml0-l"
            >
              <span
                class=" visually-hidden fw5 bl bw2 b--blue bg-gray-blue-2 pa2 pr3 mr2 mb2"
              >
                1 Result
              </span>
              <button
                class="br2 bg-gray-blue-2 link hover-dark-blue mid-gray fw5 pa2 mb2"
                type="button"
              >
                <i
                  class="fas fa-times-circle pr1"
                />
                Remove
              </button>
            </div>
          </div>
          <div
            class="flex"
          >
            <button
              class=" w4 tc br2 bg-gray-blue-2 link hover-dark-blue mid-gray w-20 tc fw5 pv3 ph3 mr2"
              type="button"
            >
              <i
                aria-hidden="true"
                class="fas fa-plus-circle pr1"
              />
              Alias
            </button>
            <button
              class=" fw7 br2 bg-blue white bg-animate hover-bg-dark-blue db w-90 tc fw5 pv3 ph3 btn--search mr2"
              type="submit"
            >
              <i
                aria-hidden="true"
                class="fas fa-search pr2"
              />
              Search
            </button>
            <button 
              class =" w4 tc br2 bg-gray-blue-2 hover-dark-blue mid-gray w-30 tc fw5 pv3 ph3"
              type = "button"
            >
              <i
                aria-hidden="true"
                class="ffa-arrow-up pr2"
              />
              Clear Data
            </button>
          </div>
          <div
            class="black-70 w-100"
            role="alert"
          />
        </form>
      </section>
      <section
        class="bg-white shadow br3 mv3 ph3 pv1"
      >
        <div
          class="flex flex-wrap items-center"
        >
          <div
            class="f5 fw7 mr4"
          >
            View Options
          </div>
          <fieldset
            aria-label="Summary overview sort options"
            class="flex flex-wrap radio radio-sm"
            dir="ltr"
            role="radiogroup"
          >
            <p
              class="pr3"
            >
              <input
                aria-checked="true"
                checked=""
                id="summary-overview-sort-options-default"
                name="summary overview sort options"
                type="radio"
                value="Default"
              />
              <label
                for="summary-overview-sort-options-default"
              >
                Default
              </label>
            </p>
            <p
              class="pr3"
            >
              <input
                aria-checked="false"
                id="summary-overview-sort-options-expanded"
                name="summary overview sort options"
                type="radio"
                value="Expanded"
              />
              <label
                for="summary-overview-sort-options-expanded"
              >
                Expanded
              </label>
            </p>
          </fieldset>
        </div>
      </section>
      <section>
        <p
          class="bg-white shadow mv4 pa4 br3 fw6 tc"
        >
          <span
            class="spinner mr2"
          />
          Loading your search results...
        </p>
      </section>
      <section>
        <div
          class="tr"
        >
          <button
            class="inline-flex bg-white f6 fw5 br2 ba b--black-10 mid-gray link hover-blue pv1 ph2 mb3"
          >
            Enable Editing
          </button>
           
          <a
            class="link hover-blue "
            href="/manual#editing"
          >
            <i
              aria-hidden="true"
              class="gray hover-dark-blue fas fa-question-circle"
            />
            <span
              class="visually-hidden"
            >
              Editing Help
            </span>
          </a>
        </div>
      </section>
      <div
        class="bg-white shadow mb6 pa4 br3"
      >
        <h2
          class="fw6 mb3"
        >
          Assumptions
        </h2>
        <p
          class="mb3"
        >
          We are only able to access your public Oregon records.
        </p>
        <p
          class="mb2"
        >
          Your analysis may be different if you have had cases:
        </p>
        <ul
          class="lh-copy pl4 mw6 mb3"
        >
          <li
            class="mb2"
          >
            Previously expunged
          </li>
          <li
            class="mb2"
          >
            From States besides Oregon within the last ten years
          </li>
          <li
            class="mb2"
          >
            From Federal Court within the last ten years
          </li>
          <li
            class="mb2"
          >
            From local District Courts, e.g. Medford Municipal Court (not Jackson County Circuit Court) from within the last ten years
          </li>
          <li
            class="mb2"
          >
            In which balances were sent to collections; due to gaps in OECI, RecordSponge may not reflect actual case balances.
          </li>
        </ul>
        <p>
          <a
            class="link hover-blue underline"
            href="/manual#assumption1"
          >
            Learn more in the Manual
          </a>
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`can displays request errors 1`] = `
<DocumentFragment>
  <main>
    <div
      class="mw8 center f6 f5-l ph2"
    >
      <h1
        class="visually-hidden"
      >
        Record Search
      </h1>
      <section
        class="bg-white shadow br3 pa4 mt3 "
      >
        <form
          class="mw7 center"
          novalidate=""
        >
          <div
            class="flex"
          >
            <div
              class="w-100 w-third-ns w-25-l mb3 pl2-r"
            >
              <label
                class="db mb1 fw6"
                for="today"
              >
                Expunge Date 
                <span
                  class="fw4 f6"
                >
                  mm/dd/yyyy
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 "
                id="today"
                required=""
                type="text"
                value="1/2/2023"
              />
            </div>
          </div>
          <div
            class="flex flex-wrap items-end"
            data-testid="alias-form-0"
          >
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="firstName"
              >
                First Name 
                <span
                  class="fw4 f6"
                />
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 br-0-ns br--left-ns relative"
                id="firstName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="middleName"
              >
                Middle Name 
                <span
                  class="fw4 f6"
                >
                  (Optional)
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 br0-ns"
                id="middleName"
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="lastName"
              >
                Last Name 
                <span
                  class="fw4 f6"
                />
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 bl-0-ns br--right-ns"
                id="lastName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 pl2-l"
            >
              <label
                class="db mb1 fw6"
                for="birthDate"
              >
                Date of Birth 
                <span
                  class="fw4 f6"
                >
                  mm/dd/yyyy
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 "
                id="birthDate"
                type="text"
                value=""
              />
            </div>
            <div
              class="visually-hidden flex items-center pb1 mb3 ml3-ns ml0-l"
            >
              <span
                class=" visually-hidden fw5 bl bw2 b--blue bg-gray-blue-2 pa2 pr3 mr2 mb2"
              >
                1 Result
              </span>
              <button
                class="br2 bg-gray-blue-2 link hover-dark-blue mid-gray fw5 pa2 mb2"
                type="button"
              >
                <i
                  class="fas fa-times-circle pr1"
                />
                Remove
              </button>
            </div>
          </div>
          <div
            class="flex"
          >
            <button
              class=" w4 tc br2 bg-gray-blue-2 link hover-dark-blue mid-gray fw5 pv3 ph3 mr2"
              type="button"
            >
              <i
                aria-hidden="true"
                class="fas fa-plus-circle pr1"
              />
              Alias
            </button>
            <button
              class=" fw7 br2 bg-blue white bg-animate hover-bg-dark-blue db w-100 tc pv3 btn--search"
              type="submit"
            >
              <i
                aria-hidden="true"
                class="fas fa-search pr2"
              />
              Search
            </button>
          </div>
          <div
            class="black-70 w-100"
            role="alert"
          />
        </form>
      </section>
      <section
        class="bg-white shadow br3 mv3 ph3 pv1"
      >
        <div
          class="flex flex-wrap items-center"
        >
          <div
            class="f5 fw7 mr4"
          >
            View Options
          </div>
          <fieldset
            aria-label="Summary overview sort options"
            class="flex flex-wrap radio radio-sm"
            dir="ltr"
            role="radiogroup"
          >
            <p
              class="pr3"
            >
              <input
                aria-checked="true"
                checked=""
                id="summary-overview-sort-options-default"
                name="summary overview sort options"
                type="radio"
                value="Default"
              />
              <label
                for="summary-overview-sort-options-default"
              >
                Default
              </label>
            </p>
            <p
              class="pr3"
            >
              <input
                aria-checked="false"
                id="summary-overview-sort-options-expanded"
                name="summary overview sort options"
                type="radio"
                value="Expanded"
              />
              <label
                for="summary-overview-sort-options-expanded"
              >
                Expanded
              </label>
            </p>
          </fieldset>
        </div>
      </section>
      <section>
        <p
          class="bg-light-gray mv4 pa4 br3 fw6"
        >
          No search results found.
        </p>
      </section>
      <p
        class="bg-washed-red mv3 pa3 br3 fw6"
        id="record_error_0"
        role="status"
      >
        first error
      </p>
      <p
        class="bg-washed-red mv3 pa3 br3 fw6"
        id="record_error_1"
        role="status"
      >
        second errorz
      </p>
      <section>
        <div
          class="bg-white shadow br3 mb3 ph3 pb3"
        >
          <div
            class="flex flex-wrap justify-end mb1"
          >
            <h2
              class="f5 fw7 mv3 mr-auto"
            >
              Search Summary
            </h2>
            <button
              class="ma2 nowrap mid-gray link fw6 br3 pv1 ph2 hover-blue"
              type="button"
            >
              <i
                aria-hidden="true"
                class="fas fa-bolt pr2"
              />
              Generate Paperwork
            </button>
            <button
              class="ma2 nowrap mid-gray link fw6 br3 pv1 ph2 hover-blue "
              type="button"
            >
              <i
                aria-hidden="true"
                class="fas fa-download pr2"
              />
              Summary PDF
            </button>
          </div>
          <div
            class="flex-ns flex-wrap"
          >
            <div
              class="w-100 w-two-thirds-l"
            >
              <h3
                class="bt b--light-gray pt2 mb3"
              >
                <span
                  class="fw7"
                >
                  Cases
                </span>
                 (0)
              </h3>
              <h3
                class="bt b--light-gray pt2 mb3"
              >
                <span
                  class="fw7"
                >
                  Charges
                </span>
                 (0)
                <p
                  class="f6 fw5 pt1"
                >
                  Excludes traffic violations
                </p>
              </h3>
              <div
                class="mb3"
              >
                <div
                  class="green bb b--light-gray lh-copy pb1"
                >
                  <span
                    class="fw7 mb2"
                  >
                    Eligible Now
                  </span>
                   
                </div>
                <ul
                  class="list"
                />
              </div>
            </div>
            <div
              class="w-100 w-33-l ph3-l mb3"
            >
              <div
                class="mb4"
              >
                <h3
                  class="fw7 bt b--light-gray pt2 mb3"
                >
                  Balance due by county
                </h3>
                <ul
                  class="mw5 list"
                >
                  None
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
        >
          <button
            class="inline-flex bg-white f6 fw5 br2 ba b--black-10 mid-gray link hover-blue pv1 ph2 mb3"
          >
            Enable Editing
          </button>
           
          <a
            class="link hover-blue "
            href="/manual#editing"
          >
            <i
              aria-hidden="true"
              class="gray hover-dark-blue fas fa-question-circle"
            />
            <span
              class="visually-hidden"
            >
              Editing Help
            </span>
          </a>
        </div>
        <div
          class="mb3"
        >
          <ul
            class="list"
          />
        </div>
      </section>
      <div
        class="bg-white shadow mb6 pa4 br3"
      >
        <h2
          class="fw6 mb3"
        >
          Assumptions
        </h2>
        <p
          class="mb3"
        >
          We are only able to access your public Oregon records.
        </p>
        <p
          class="mb2"
        >
          Your analysis may be different if you have had cases:
        </p>
        <ul
          class="lh-copy pl4 mw6 mb3"
        >
          <li
            class="mb2"
          >
            Previously expunged
          </li>
          <li
            class="mb2"
          >
            From States besides Oregon within the last ten years
          </li>
          <li
            class="mb2"
          >
            From Federal Court within the last ten years
          </li>
          <li
            class="mb2"
          >
            From local District Courts, e.g. Medford Municipal Court (not Jackson County Circuit Court) from within the last ten years
          </li>
          <li
            class="mb2"
          >
            In which balances were sent to collections; due to gaps in OECI, RecordSponge may not reflect actual case balances.
          </li>
        </ul>
        <p>
          <a
            class="link hover-blue underline"
            href="/manual#assumption1"
          >
            Learn more in the Manual
          </a>
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
